--- a/contacto.html
+++ b/contacto.html
@@ -60,7 +60,9 @@
 				<a href="contacto.html">Contacto</a>
 			</li>			
 		</ul>
+		<img src="Imagenes/storeOpen.jpg" alt="img_store">
 	</nav>
+
 
 
 
