--- a/vintage.html
+++ b/vintage.html
@@ -59,13 +59,15 @@
 				<a href="contacto.html">Contacto</a>
 			</li>			
 		</ul>
+		<img src="Imagenes/storeOpen.jpg" alt="img_store">
 	</nav>
+	<br>
 
  
 
 	
 
-		<h3 class="titulos">Guitarras Vintage</h3>
+		
 
 
 		
@@ -73,8 +75,10 @@
 	    <section class="flexPadre">
 
 	    	<aside>
+
+	    	<h3 class="titulos">Guitarras Vintage</h3>
 	    		
-			<label for="sexo"> - Find in Stores</label>
+			<label for="store"> - Find in Stores</label>
 
 
 				<br>
@@ -88,7 +92,7 @@
 				<br>	
 				<br>	
 
-			<label for="sexo"> - Brands</label>
+			<label for="brand"> - Brands</label>
 
 
 				<br>
@@ -120,50 +124,27 @@
 
 			<figure>
 
-			 <!--  <table width="15%" border="1">
-			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo    </th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			  </table>	
-			 -->
-			<img src="Imagenes/Vintage/Vintage 1993 FLANDERS BOSTONIAN Natural Hollow Body Electric Guitar Natural.jpg" alt="Excelente estado" width="300">
+			<a href="html guitarras/guitarras12.html">
+				<img src="Imagenes/Vintage/Vintage 1993 FLANDERS BOSTONIAN Natural Hollow Body Electric Guitar Natural.jpg" alt="Excelente estado" width="200" height="410">
+			</a>
 				<figcaption class="titulos">
 					Vintage 1993 FLANDERS BOSTONIAN Natural Hollow Body Electric Guitar Natural
+					<p class="liColor"><strong>Price: $500</strong></p>
+					<input class="btn btn-primary" type="buy" value="Add To Cart">
 				</figcaption>
 
 			</figure>
 
-			<figure>
+		<figure>
 
-			<!--   <table width="15%" border="1">
 			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo    </th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			  </table>	 -->
-
-			<img src="Imagenes/Vintage/Vintage Epiphone 1960s E444T Hollow Body Electric Guitar.jpg" alt="Excelente estado" width="300">
+			<a href="html guitarras/guitarras13.html">
+				<img src="Imagenes/Vintage/Vintage Epiphone 1960s E444T Hollow Body Electric Guitar.jpg" alt="Excelente estado" width="200">
+		    </a>
 				<figcaption class="titulos">
 					Vintage Epiphone 1960s E444T Hollow Body Electric Guitar
+					<p class="liColor"><strong>Price: $500</strong></p>
+					<input class="btn btn-primary" type="buy" value="Add To Cart">
 				</figcaption>
 
 		</figure>
@@ -185,60 +166,41 @@
 					<td>Contenido</td>
 				</tr>
 			</table>	 -->
-
-			<img src="Imagenes/Vintage/Vintage Giannini GN65 Classical Acoustic Guitar Antique Natural.jpg" alt="Excelente estado" width="300">
+			<a href="html guitarras/guitarras14.html">
+					<img src="Imagenes/Vintage/Vintage Giannini GN65 Classical Acoustic Guitar Antique Natural.jpg" alt="Excelente estado" width="200">
+		    </a>
 				<figcaption class="titulos">
 					Vintage Giannini GN65 Classical Acoustic Guitar Antique Natural
+					<p class="liColor"><strong>Price: $500</strong></p>
+					<input class="btn btn-primary" type="buy" value="Add To Cart">
 				</figcaption>
 
 		</figure>
 
 		<figure>
 
-		<!-- 	<table width="15%" border="1">
-			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo</th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			</table>	 -->
-
-			<img src="Imagenes/Vintage/Vintage Gibson 1980 Les Paul Custom Solid Body Electric Guitar Sunburst.jpg" alt="Excelente estado" width="300">
+			<a href="html guitarras/guitarras15.html">
+			<img src="Imagenes/Vintage/Vintage Gretsch Guitars 1973 Chet Atkins Country Gentleman Hollow Body Electric Guitar Walnut.jpg" alt="Excelente estado" width="200">
+			</a>
 				<figcaption class="titulos">
-					Vintage Gibson 1980 Les Paul Custom Solid Body Electric Guitar Sunburst
+					Gretsch Guitars 1973 Chet Atkins Country Gentleman Hollow Body Walnut
+					<p class="liColor"><strong>Price: $500</strong></p>
+					<input class="btn btn-primary" type="buy" value="Add To Cart">
 				</figcaption>
 
-		</figure>
+			</figure>
 
 		<figure>
 
-		<!-- 	<table width="15%" border="1">
 			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo</th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			</table>	
- -->
-			<img src="Imagenes/Vintage/Vintage Gibson 1990s Firebird Solid Body Electric Guitar 2 Tone Sunburst.jpg" alt="Excelente estado" width="300">
+
+			<a href="html guitarras/guitarras13.html">
+				<img src="Imagenes/Vintage/Vintage Epiphone 1960s E444T Hollow Body Electric Guitar.jpg" alt="Excelente estado" width="200">
+		    </a>
 				<figcaption class="titulos">
-					Vintage Gibson 1990s Firebird Solid Body Electric Guitar 2 Tone Sunburst
+					Vintage Epiphone 1960s E444T Hollow Body Electric Guitar
+					<p class="liColor"><strong>Price: $500</strong></p>
+					<input class="btn btn-primary" type="buy" value="Add To Cart">
 				</figcaption>
 
 		</figure>
@@ -261,12 +223,40 @@
 				</tr>
 			</table>	 -->
 
-			<img src="Imagenes/Vintage/Vintage Gretsch Guitars 1973 Chet Atkins Country Gentleman Hollow Body Electric Guitar Walnut.jpg" alt="Excelente estado" width="300">
+			<a href="html guitarras/guitarras15.html">
+			<img src="Imagenes/Vintage/Vintage Gretsch Guitars 1973 Chet Atkins Country Gentleman Hollow Body Electric Guitar Walnut.jpg" alt="Excelente estado" width="200">
+			</a>
 				<figcaption class="titulos">
-					Vintage Gretsch Guitars 1973 Chet Atkins Country Gentleman Hollow Body Electric Guitar Walnut
+					Gretsch Guitars 1973 Chet Atkins Country Gentleman Hollow Body Walnut
+					<p class="liColor"><strong>Price: $500</strong></p>
+					<input class="btn btn-primary" type="buy" value="Add To Cart">
 				</figcaption>
 
 		</figure>
+		<figure>
+
+			
+			<a href="html guitarras/guitarras12.html">
+				<img src="Imagenes/Vintage/Vintage 1993 FLANDERS BOSTONIAN Natural Hollow Body Electric Guitar Natural.jpg" alt="Excelente estado" width="200" height="410">
+			</a>
+				<figcaption class="titulos">
+					Vintage 1993 FLANDERS BOSTONIAN Natural Hollow Body Electric Guitar Natural
+					<p class="liColor"><strong>Price: $500</strong></p>
+					<input class="btn btn-primary" type="buy" value="Add To Cart">
+				</figcaption>
+
+			</figure>
+			<figure>
+
+			
+			<a href="html guitarras/guitarras14.html">
+					<img src="Imagenes/Vintage/Vintage Giannini GN65 Classical Acoustic Guitar Antique Natural.jpg" alt="Excelente estado" width="200">
+		    </a>
+				<figcaption class="titulos">
+					Vintage Giannini GN65 Classical Acoustic Guitar Antique Natural
+					<p class="liColor"><strong>Price: $500</strong></p>
+					<input class="btn btn-primary" type="buy" value="Add To Cart">
+				</figcaption>
 
 
 		
