--- a/home.html
+++ b/home.html
@@ -17,12 +17,13 @@
  
 	 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	 </script>
-     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+ -->     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 	
 </head>
-<body>			
+<body>	
+
 	<!-- BEM -->
 	<header class="header scale-up-center">
 		<a href="home.html">
@@ -45,13 +46,13 @@
 				<a href="usadas.html">Usadas</a>	
 				<ul class="submenu">
 					<li>
-						<a href="usadas.html">Excellent</a>
+						<a href="nuevas.html">Excellent</a>
 					</li>
 					<li>
 					   <a href="usadas.html">Good</a>
-					</li >
+					</li>
 					<li>
-					   <a href="usadas.html">Poor</a>
+					   <a href="vintage.html">Poor</a>
 					</li>
 				</ul>
 			</li>
@@ -70,7 +71,17 @@
 
  <!-- BEM (article article__parrafo) -->
 <article class="article">
+<div class="article__parrafo">
+	<img src="Imagenes/storeOpen.jpg" alt="img_store">
 
+					<br>
+					<br>
+
+	<img src="Imagenes/violas.jpg" alt="guitarras" class="bordes">
+
+	<br>
+	<br>
+</div>
  	<div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -99,23 +110,86 @@
       </div>
     </div>
     <!-- BEM -->
+			<div>	
 				<p class="article__parrafo">
 					Lead Guitars is excited to offer international shipping to over 100 countries.
 					Ordering is easy-choose your shipping destination and preferred currency.
 					Only products eligible to ship to your country will be displayed and all GuitarCenter.com
 					prices will automatically be converted into your chosen currency.
 					International customers can buy instruments from our full catalog and ship them to a U.S. address if the payment method has a U.S. billing address.
-					If you are a domestic customer shipping internationally, select the destination country before shopping. All fees are based on the destination country.
+					If you are a domestic customer shipping internationally, select the destination country before shopping. All fees are based on the destination country.					
 
-							
 				</p>
+			</div>	
+
+				<br>
+
+
 
 </article>
+			
+
 
 <section class="videos">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/StzfQEruOyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/GXdv0BmTfRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+		
+
+			<img src="Imagenes/usedGear.jpg" alt="instrumentos_usados">
+
+			<br>
+			<br>
+
+		<div class="homeGrid">
+				<div class="contenedor">
+					<a href="html guitarras/guitarras.html">
+					<img class="bordes" src="Imagenes/Usadas/Used Fender 2015 American Standard Stratocaster Solid Body Electric Guitar Olympic White.jpg" alt="Excelente estado" width="150">
+					</a>
+					<figcaption class="titulos">
+						Used Fender 2015 American Standard Stratocaster
+						<p class="liColor"><strong>Price: $500</strong></p>
+					</figcaption>
+				</div>
+				<div class="contenedor">
+					<a href="html guitarras/guitarras1.html">
+					<img class="bordes" src="Imagenes/Usadas/Used Gibson 2019 Les Paul Classic Solid Body Electric Guitar Ebony.jpg" alt="Excelente estado" width="150">
+					</a>
+					<figcaption class="titulos">
+						Used Gibson 2019 Les Paul Classic Solid Body Electric Guitar Ebony
+						<p class="liColor"><strong>Price: $500</strong></p>
+					</figcaption>
+				</div>
+				<div class="contenedor">
+					<a href="html guitarras/guitarras2.html">
+					<img class="bordes" src="Imagenes/Usadas/Used Fender 2017 Artist Series Eric Johnson Stratocaster Solid Body Electric Guitar Tropical Turquoise.jpg" alt="Excelente estado" width="150">
+					</a>
+					<figcaption class="titulos">
+						Used Fender Eric Johnson Stratocaster Solid Body Electric Guitar Tropical 
+						<p class="liColor"><strong>Price: $500</strong></p>
+					</figcaption>
+				</div>
+				<div class="contenedor">
+					<a href="html guitarras/guitarras3.html">
+					<img class="bordes" src="Imagenes/Usadas/Used Gibson 2017 L00 Standard Acoustic Electric Guitar Vintage Sunburst.jpg" alt="Excelente estado" width="150">
+					</a>
+					<figcaption class="titulos">
+						Used Gibson 2017 L00 Standard Acoustic Electric Guitar Vintage Sunburst
+						<p class="liColor"><strong>Price: $500</strong></p>
+					</figcaption>
+				</div>
+		</div>
+
+		<br>
+		<br>
+
+
+
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/StzfQEruOyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/GXdv0BmTfRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
 
 </section>
 <footer>Copyright © Lead Guitars, Inc.All Rights Reserved.</footer>
