cambiando home por index

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 
 	<!-- BEM -->
 	<header class="header scale-up-center">
-		<a href="home.html">
+		<a href="index.html">
     		<img class="header__logo" src="Imagenes/logo1.jpg">
     	</a>
     	<input type="text" name="nombre" placeholder="Search" class="buscador bordes">
@@ -37,7 +37,7 @@
 	<nav>
 		<ul>
 			<li>
-				<a href="home.html">Home</a>
+				<a href="index.html">Home</a>
 			</li>
 			<li>
 				<a href="nuevas.html">Nuevas</a>
