--- a/usadas.html
+++ b/usadas.html
@@ -22,7 +22,7 @@
 <body class="fondoImg">
 
 	<header class="header scale-up-center">
-    	<a href="home.html">
+    	<a href="index.html">
     		<img class="header__logo" src="Imagenes/logo1.jpg">
     	</a>
     	<input type="text" name="nombre" placeholder="Search" class="buscador bordes">
@@ -35,7 +35,7 @@
 	<nav>
 		<ul>
 			<li>
-				<a href="home.html">Home</a>
+				<a href="index.html">Home</a>
 			</li>
 			<li>
 				<a href="nuevas.html">Nuevas</a>
