arreglando nombre de logo

--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
 
 	<header class="header scale-up-center">
     	<a href="index.html">
-    		<img class="header__logo" src="Imagenes/logo1.jpg">
+    		<img class="header__logo" src="Imagenes/Logo1.jpg">
     	</a>
     	<input type="text" name="nombre" placeholder="Search" class="buscador bordes">
     	
