Correccion de footer

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="css bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="css/mystyle.css"> 
 	<link rel="stylesheet" href="animations.css">  
+	<link rel="stylesheet" href="fonts/style.css">
  
 	 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	 </script>
@@ -21,15 +22,31 @@
  -->     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 	
+ 	
 </head>
 <body>	
 
-	<!-- BEM -->
+	
 	<header class="header scale-up-center">
 		<a href="index.html">
     		<img class="header__logo" src="Imagenes/Logo1.jpg">
     	</a>
     	<input type="text" name="nombre" placeholder="Search" class="buscador bordes">
+    	
+    	<a href="https://www.facebook.com/">
+    		<span class="icon-facebook"></span>
+    	</a>
+    	<a href="https://www.google.com.ar/">	
+			<span class="icon-google"></span>
+		</a>
+		<a href="https://www.youtube.com/">
+			<span class="icon-youtube"></span>
+		</a>
+		<a href="https://twitter.com/">
+			<span class="icon-twitter"></span>
+		</a>
+
+
     	
 	</header>
 
@@ -114,7 +131,7 @@
 				<p class="article__parrafo">
 					Lead Guitars is excited to offer international shipping to over 100 countries.
 					Ordering is easy-choose your shipping destination and preferred currency.
-					Only products eligible to ship to your country will be displayed and all GuitarCenter.com
+					Only products eligible to ship to your country will be displayed and all LeadGuitars.com
 					prices will automatically be converted into your chosen currency.
 					International customers can buy instruments from our full catalog and ship them to a U.S. address if the payment method has a U.S. billing address.
 					If you are a domestic customer shipping internationally, select the destination country before shopping. All fees are based on the destination country.					
@@ -141,7 +158,7 @@
 			<br>
 			<br>
 
-		<div class="homeGrid">
+		<div class="homeflex">
 				<div class="contenedor">
 					<a href="html guitarras/guitarras.html">
 					<img class="bordes" src="Imagenes/Usadas/Used Fender 2015 American Standard Stratocaster Solid Body Electric Guitar Olympic White.jpg" alt="Excelente estado" width="150">
@@ -184,15 +201,36 @@
 		<br>
 
 
+		<div>
 
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/StzfQEruOyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<img src="Imagenes/spotlight.jpg" alt="spotlight">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/StzfQEruOyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/GXdv0BmTfRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/GXdv0BmTfRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 
 
 </section>
-<footer>Copyright © Lead Guitars, Inc.All Rights Reserved.</footer>
+<footer>	
+	<p>
+		<a href="https://www.facebook.com/">
+    		<span class="icon-facebook"></span>
+    	</a>
+    	<a href="https://www.google.com.ar/">	
+			<span class="icon-google"></span>
+		</a>
+		<a href="https://www.youtube.com/">
+			<span class="icon-youtube"></span>
+		</a>
+		<a href="https://twitter.com/">
+			<span class="icon-twitter"></span>
+		</a>
+		<br>
+		Need Help? Call 800-472-6274, 9:30am - 9:00pm EST, Monday - Friday, 9:30am - 6:00pm EST, Saturday & Sunday
+	</p>
+	<p>The publication of the MSRP is for reference only and is not a representation of a selling price by Sam Ash or any other retailer.</p>
+	<p>Copyright © Lead Guitars, Inc.All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
