--- a/usadas.html
+++ b/usadas.html
@@ -12,6 +12,7 @@
 	<title>Lead Guitars, venta de instrumentos musicales nuevos y usados!</title>
 	<link rel="stylesheet" href="css bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="css/mystyle.css">
+	<link rel="stylesheet" href="fonts/style.css">
 
 	 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	 </script>
@@ -22,11 +23,23 @@
 <body class="fondoImg">
 
 	<header class="header scale-up-center">
-    	<a href="index.html">
+		<a href="index.html">
     		<img class="header__logo" src="Imagenes/Logo1.jpg">
     	</a>
     	<input type="text" name="nombre" placeholder="Search" class="buscador bordes">
     	
+    	<a href="https://www.facebook.com/">
+    		<span class="icon-facebook"></span>
+    	</a>
+    	<a href="https://www.google.com.ar/">	
+			<span class="icon-google"></span>
+		</a>
+		<a href="https://www.youtube.com/">
+			<span class="icon-youtube"></span>
+		</a>
+		<a href="https://twitter.com/">
+			<span class="icon-twitter"></span>
+		</a>    	
 	</header>
 	
 
@@ -63,21 +76,26 @@
 		</ul>
 		
 		<img src="Imagenes/usedGear.jpg" alt="instrumentos_usados">
+		<br>
+		<br>
 
+		<h3>Guitarras Usadas</h3>
 	</nav>	
-	<br>
+	
+
+
 
 		
 
 		
-
+<main>
 	<section class="flexPadre">
 
 
 
-		<aside>
+		<!-- <aside>
 
-			<h3 class="titulos">Guitarras Usadas</h3>
+			<h3>Guitarras Usadas</h3>
 			
 			<label for="brands"> - Find in Stores</label>
 
@@ -122,7 +140,7 @@
 
 			
 
-	    </aside>
+	    </aside> -->
 
 		<div class="grid-div">	
 
@@ -145,21 +163,7 @@
 
 		<figure>
 
-			<!-- <table width="15%" border="1">
 			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo</th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			</table>	 -->
 			<a href="html guitarras/guitarras9.html">
 				<img src="Imagenes/Usadas/Used Fender 2017 Artist Series Eric Johnson Stratocaster Solid Body Electric Guitar Tropical Turquoise.jpg" alt="Excelente estado" width="200">
 			</a>
@@ -173,22 +177,7 @@
 
 		<figure>
 
-			<!-- <table width="15%" border="1">
 			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo</th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			</table>	
- -->		
  			<a href="html guitarras/guitarras10.html">
 				<img src="Imagenes/Usadas/Used Gibson 2017 L00 Standard Acoustic Electric Guitar Vintage Sunburst.jpg" alt="Excelente estado" width="200">
 			</a>
@@ -202,22 +191,7 @@
 
 		<figure>
 
-			<!-- <table width="15%" border="1">
 			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo</th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			</table>	
- -->
  			<a href="html guitarras/guitarras11.html">
 				<img src="Imagenes/Usadas/Used Gibson 2019 Les Paul Classic Solid Body Electric Guitar Ebony.jpg" alt="Excelente estado" width="200">
 			</a>
@@ -232,22 +206,7 @@
 
 		<figure>
 
-		<!-- 	<table width="15%" border="1">
-			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo</th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			</table>	 -->
-
+	
 			<a href="html guitarras/guitarras10.html">
 				<img src="Imagenes/Usadas/Used Gibson 2017 L00 Standard Acoustic Electric Guitar Vintage Sunburst.jpg" alt="Excelente estado" width="200">
 			</a>
@@ -261,22 +220,7 @@
 
 		<figure>
 
-			<!-- <table width="15%" border="1">
 			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo</th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			</table>	
- -->
 			<a href="html guitarras/guitarras11.html">
 				<img src="Imagenes/Usadas/Used Gibson 2019 Les Paul Classic Solid Body Electric Guitar Ebony.jpg" alt="Excelente estado" width="200">
 			</a>
@@ -326,17 +270,43 @@
 		
 
 	</section>
+</main>	
 
-	
+	<section class="videos section">
+
+		<img src="Imagenes/violas.jpg" alt="guitarras" class="bordes">
+
+		<br>
+		<br>
+
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/StzfQEruOyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/GXdv0BmTfRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+	</section>
 
 
+<footer>
 
-	
-
-
-
-
-<footer>Copyright © Lead Guitars, Inc.All Rights Reserved.</footer>
+	<p>
+		<a href="https://www.facebook.com/">
+    		<span class="icon-facebook"></span>
+    	</a>
+    	<a href="https://www.google.com.ar/">	
+			<span class="icon-google"></span>
+		</a>
+		<a href="https://www.youtube.com/">
+			<span class="icon-youtube"></span>
+		</a>
+		<a href="https://twitter.com/">
+			<span class="icon-twitter"></span>
+		</a>
+		<br>
+		Need Help? Call 800-472-6274, 9:30am - 9:00pm EST, Monday - Friday, 9:30am - 6:00pm EST, Saturday & Sunday
+	</p>
+	<p>The publication of the MSRP is for reference only and is not a representation of a selling price by Sam Ash or any other retailer.</p>
+	<p>Copyright © Lead Guitars, Inc.All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
