--- a/html guitarras/guitarras13.html
+++ b/html guitarras/guitarras13.html
@@ -13,7 +13,8 @@
 
 	<link rel="stylesheet" href="../css bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="../css/mystyle.css"> 
-	<link rel="stylesheet" href="../animations.css">  
+	<link rel="stylesheet" href="../animations.css"> 
+	<link rel="stylesheet" href="fonts/style.css"> 
  
 	 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	 </script>
@@ -115,7 +116,29 @@
 	
 
 
-<footer>Copyright © Lead Guitars, Inc.All Rights Reserved.</footer>
+<footer>
+	
+
+	<p>
+		<a href="https://www.facebook.com/">
+    		<span class="icon-facebook"></span>
+    	</a>
+    	<a href="https://www.google.com.ar/">	
+			<span class="icon-google"></span>
+		</a>
+		<a href="https://www.youtube.com/">
+			<span class="icon-youtube"></span>
+		</a>
+		<a href="https://twitter.com/">
+			<span class="icon-twitter"></span>
+		</a>
+		<br>
+		Need Help? Call 800-472-6274, 9:30am - 9:00pm EST, Monday - Friday, 9:30am - 6:00pm EST, Saturday & Sunday
+	</p>
+	<p>The publication of the MSRP is for reference only and is not a representation of a selling price by Sam Ash or any other retailer.</p>
+	<p>Copyright © Lead Guitars, Inc.All Rights Reserved.</p>
+</footer>
+
 	
 </body>
 </html>
