--- a/html guitarras/guitarras7.html
+++ b/html guitarras/guitarras7.html
@@ -13,7 +13,8 @@
 
 	<link rel="stylesheet" href="../css bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="../css/mystyle.css"> 
-	<link rel="stylesheet" href="../animations.css">  
+	<link rel="stylesheet" href="../animations.css">
+	<link rel="stylesheet" href="fonts/style.css">  
  
 	 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	 </script>
@@ -104,18 +105,26 @@
 		<iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52467.87096218264!2d-58.28173942515596!3d-34.72429558951625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32e38e45f5777%3A0x6a86dac21334524f!2sQuilmes%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1598562994666!5m2!1ses!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </section>
 
-
-		<!-- <p class="hs"><strong>Product Description:</strong><br>
-			Made In: China. This product comes with a case. <br><br>
-		Condition: Exellent. <br><br>
-		<strong>Price: $500</strong>
-	</p> -->
-
-		<!-- <p class="hs"><strong>Condition: Excellent</strong></p> -->
-	
-
-
-<footer>Copyright © Lead Guitars, Inc.All Rights Reserved.</footer>
+<footer>	
+	<p>
+		<a href="https://www.facebook.com/">
+    		<span class="../icon-facebook"></span>
+    	</a>
+    	<a href="https://www.google.com.ar/">	
+			<span class="icon-google"></span>
+		</a>
+		<a href="https://www.youtube.com/">
+			<span class="icon-youtube"></span>
+		</a>
+		<a href="https://twitter.com/">
+			<span class="icon-twitter"></span>
+		</a>
+		<br>
+		Need Help? Call 800-472-6274, 9:30am - 9:00pm EST, Monday - Friday, 9:30am - 6:00pm EST, Saturday & Sunday
+	</p>
+	<p>The publication of the MSRP is for reference only and is not a representation of a selling price by Sam Ash or any other retailer.</p>
+	<p>Copyright © Lead Guitars, Inc.All Rights Reserved.</p>
+</footer>	 
 	
 </body>
 </html>
