--- a/vintage.html
+++ b/vintage.html
@@ -13,6 +13,7 @@
 
 	<link rel="stylesheet" href="css bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="css/mystyle.css">
+	<link rel="stylesheet" href="fonts/style.css">
 
 	 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	 </script>
@@ -23,11 +24,23 @@
 <body>
 	
 	<header class="header scale-up-center">
-    	<a href="index.html">
+		<a href="index.html">
     		<img class="header__logo" src="Imagenes/Logo1.jpg">
     	</a>
     	<input type="text" name="nombre" placeholder="Search" class="buscador bordes">
     	
+    	<a href="https://www.facebook.com/">
+    		<span class="icon-facebook"></span>
+    	</a>
+    	<a href="https://www.google.com.ar/">	
+			<span class="icon-google"></span>
+		</a>
+		<a href="https://www.youtube.com/">
+			<span class="icon-youtube"></span>
+		</a>
+		<a href="https://twitter.com/">
+			<span class="icon-twitter"></span>
+		</a>    	
 	</header>
 		
 	<nav>
@@ -60,8 +73,11 @@
 			</li>			
 		</ul>
 		<img src="Imagenes/storeOpen.jpg" alt="img_store">
+		<br>
+		<br>
+		<h3>Guitarras Vintage</h3>
 	</nav>
-	<br>
+
 
  
 
@@ -71,12 +87,12 @@
 
 
 		
-
+<main>
 	    <section class="flexPadre">
 
-	    	<aside>
+	   <!--  <aside>
 
-	    	<h3 class="titulos">Guitarras Vintage</h3>
+	    	<h3>Guitarras Vintage</h3>
 	    		
 			<label for="store"> - Find in Stores</label>
 
@@ -118,7 +134,7 @@
 					<input type="radio"> Jackson
 				<br>
 
-    	</aside>
+    	</aside> --> 
 
 	   	  <div class="grid-div">	
 
@@ -151,21 +167,7 @@
 
 		<figure>
 
-		<!-- 	<table width="15%" border="1">
-			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo</th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			</table>	 -->
+		
 			<a href="html guitarras/guitarras14.html">
 					<img src="Imagenes/Vintage/Vintage Giannini GN65 Classical Acoustic Guitar Antique Natural.jpg" alt="Excelente estado" width="200">
 		    </a>
@@ -207,30 +209,16 @@
 
 		<figure>
 
-	<!-- 		<table width="15%" border="1">
-			
-				<tr>
-					<th>Marca</th>
-					<th>Modelo</th>
-					<th>Caracteristicas</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-					<td>Contenido</td>
-				</tr>
-			</table>	 -->
+
 
 			<a href="html guitarras/guitarras15.html">
-			<img src="Imagenes/Vintage/Vintage Gretsch Guitars 1973 Chet Atkins Country Gentleman Hollow Body Electric Guitar Walnut.jpg" alt="Excelente estado" width="200">
+				<img src="Imagenes/Vintage/Vintage Gretsch Guitars 1973 Chet Atkins Country Gentleman Hollow Body Electric Guitar Walnut.jpg" alt="Excelente estado" width="200">
 			</a>
-				<figcaption class="titulos">
-					Gretsch Guitars 1973 Chet Atkins Country Gentleman Hollow Body Walnut
-					<p class="liColor"><strong>Price: $500</strong></p>
+			<figcaption class="titulos">
+				Gretsch Guitars 1973 Chet Atkins Country Gentleman Hollow Body Walnut
+				<p class="liColor"><strong>Price: $500</strong></p>
 					<input class="btn btn-primary" type="buy" value="Add To Cart">
-				</figcaption>
+			</figcaption>
 
 		</figure>
 		<figure>
@@ -264,10 +252,44 @@
 
 
 	</section>
+</main>
+
+	<section class="videos section">
+
+		<img src="Imagenes/violas.jpg" alt="guitarras" class="bordes">
+
+		<br>
+		<br>
+
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/StzfQEruOyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/GXdv0BmTfRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+	</section>
 
 	
 
-<footer>Copyright © Lead Guitars, Inc.All Rights Reserved.</footer>
+<footer>
+
+	<p>
+		<a href="https://www.facebook.com/">
+    		<span class="icon-facebook"></span>
+    	</a>
+    	<a href="https://www.google.com.ar/">	
+			<span class="icon-google"></span>
+		</a>
+		<a href="https://www.youtube.com/">
+			<span class="icon-youtube"></span>
+		</a>
+		<a href="https://twitter.com/">
+			<span class="icon-twitter"></span>
+		</a>
+		<br>
+		Need Help? Call 800-472-6274, 9:30am - 9:00pm EST, Monday - Friday, 9:30am - 6:00pm EST, Saturday & Sunday
+	</p>
+	<p>The publication of the MSRP is for reference only and is not a representation of a selling price by Sam Ash or any other retailer.</p>
+	<p>Copyright © Lead Guitars, Inc.All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
