--- a/html guitarras/guitarras15.html
+++ b/html guitarras/guitarras15.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="../css bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="../css/mystyle.css"> 
 	<link rel="stylesheet" href="../animations.css"> 
-	<link rel="stylesheet" href="fonts/style.css"> 
+	<link rel="stylesheet" href="../fonts/style.css"> 
  
 	 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	 </script>
@@ -32,6 +32,18 @@
     	</a>
     	<input type="text" name="nombre" placeholder="Search" class="buscador bordes">
     	
+    	<a href="https://www.facebook.com/">
+    		<span class="icon-facebook"></span>
+    	</a>
+    	<a href="https://www.google.com.ar/">	
+			<span class="icon-google"></span>
+		</a>
+		<a href="https://www.youtube.com/">
+			<span class="icon-youtube"></span>
+		</a>
+		<a href="https://twitter.com/">
+			<span class="icon-twitter"></span>
+		</a>    	
 	</header>
 
 
