--- a/index.html
+++ b/index.html
@@ -79,23 +79,16 @@
 		</ul>
 	</nav>
 
-
-
-
-
- <!-- BEM (article article__parrafo) -->
 <article class="article">
-<div class="article__parrafo">
-	<img src="Imagenes/storeOpen.jpg" alt="img_store">
+	<div class="article__parrafo">
+		<img src="Imagenes/storeOpen.jpg" alt="img_store">
+		<br>
+		<br>
+		<img src="Imagenes/violas.jpg" alt="guitarras" class="bordes">
+		<br>
+		<br>
+	</div>
 
-					<br>
-					<br>
-
-	<img src="Imagenes/violas.jpg" alt="guitarras" class="bordes">
-
-	<br>
-	<br>
-</div>
  	<div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -123,91 +116,80 @@
         </div>
       </div>
     </div>
-    <!-- BEM -->
-			<div>	
-				<p class="article__parrafo">
-					Lead Guitars is excited to offer international shipping to over 100 countries.
-					Ordering is easy-choose your shipping destination and preferred currency.
-					Only products eligible to ship to your country will be displayed and all LeadGuitars.com
-					prices will automatically be converted into your chosen currency.
-					International customers can buy instruments from our full catalog and ship them to a U.S. address if the payment method has a U.S. billing address.
-					If you are a domestic customer shipping internationally, select the destination country before shopping. All fees are based on the destination country.					
 
-				</p>
-			</div>	
+	<div>	
+		<p class="article__parrafo">
+			Lead Guitars is excited to offer international shipping to over 100 countries.
+			Ordering is easy-choose your shipping destination and preferred currency.
+			Only products eligible to ship to your country will be displayed and all LeadGuitars.com
+			prices will automatically be converted into your chosen currency.
+			International customers can buy instruments from our full catalog and ship them to a U.S. address if the payment method has a U.S. billing address.
+			If you are a domestic customer shipping internationally, select the destination country before shopping. All fees are based on the destination country.					
+		</p>
+	</div>	
 
-				<br>
-
-
+	<br>
 
 </article>
-			
 
+<section class="videos">		
 
-<section class="videos">
-
-
-
-		
-
-			<img src="Imagenes/usedGear.jpg" alt="instrumentos_usados">
+	<img src="Imagenes/usedGear.jpg" alt="instrumentos_usados" class="publicidad">
 
 			<br>
 			<br>
 
-		<div class="homeflex">
-				<div class="contenedor">
-					<a href="html guitarras/guitarras.html">
-					<img class="bordes" src="Imagenes/Usadas/Used Fender 2015 American Standard Stratocaster Solid Body Electric Guitar Olympic White.jpg" alt="Excelente estado" width="150">
-					</a>
-					<figcaption class="titulos">
-						Used Fender 2015 American Standard Stratocaster
-						<p class="liColor"><strong>Price: $500</strong></p>
-					</figcaption>
-				</div>
-				<div class="contenedor">
-					<a href="html guitarras/guitarras1.html">
-					<img class="bordes" src="Imagenes/Usadas/Used Gibson 2019 Les Paul Classic Solid Body Electric Guitar Ebony.jpg" alt="Excelente estado" width="150">
-					</a>
-					<figcaption class="titulos">
-						Used Gibson 2019 Les Paul Classic Solid Body Electric Guitar Ebony
-						<p class="liColor"><strong>Price: $500</strong></p>
-					</figcaption>
-				</div>
-				<div class="contenedor">
-					<a href="html guitarras/guitarras2.html">
-					<img class="bordes" src="Imagenes/Usadas/Used Fender 2017 Artist Series Eric Johnson Stratocaster Solid Body Electric Guitar Tropical Turquoise.jpg" alt="Excelente estado" width="150">
-					</a>
-					<figcaption class="titulos">
-						Used Fender Eric Johnson Stratocaster Solid Body Electric Guitar Tropical 
-						<p class="liColor"><strong>Price: $500</strong></p>
-					</figcaption>
-				</div>
-				<div class="contenedor">
-					<a href="html guitarras/guitarras3.html">
-					<img class="bordes" src="Imagenes/Usadas/Used Gibson 2017 L00 Standard Acoustic Electric Guitar Vintage Sunburst.jpg" alt="Excelente estado" width="150">
-					</a>
-					<figcaption class="titulos">
-						Used Gibson 2017 L00 Standard Acoustic Electric Guitar Vintage Sunburst
-						<p class="liColor"><strong>Price: $500</strong></p>
-					</figcaption>
-				</div>
+	<div class="homeflex">
+		<div class="contenedor">
+			<a href="html guitarras/guitarras.html">
+			<img class="bordes" src="Imagenes/Usadas/Used Fender 2015 American Standard Stratocaster Solid Body Electric Guitar Olympic White.jpg" alt="Excelente estado" width="150">
+			</a>
+			<figcaption class="titulos">
+				Used Fender 2015 American Standard Stratocaster
+	 			<p class="liColor"><strong>Price: $500</strong></p>
+			</figcaption>
 		</div>
+		<div class="contenedor">
+			<a href="html guitarras/guitarras1.html">
+			<img class="bordes" src="Imagenes/Usadas/Used Gibson 2019 Les Paul Classic Solid Body Electric Guitar Ebony.jpg" alt="Excelente estado" width="150">
+			</a>
+			<figcaption class="titulos">
+				Used Gibson 2019 Les Paul Classic Solid Body Electric Guitar Ebony
+				<p class="liColor"><strong>Price: $500</strong></p>
+			</figcaption>
+		</div>
+		<div class="contenedor">
+			<a href="html guitarras/guitarras2.html">
+			<img class="bordes" src="Imagenes/Usadas/Used Fender 2017 Artist Series Eric Johnson Stratocaster Solid Body Electric Guitar Tropical Turquoise.jpg" alt="Excelente estado" width="150">
+			</a>
+			<figcaption class="titulos">
+				Used Fender Eric Johnson Stratocaster Solid Body Electric Guitar Tropical 
+				<p class="liColor"><strong>Price: $500</strong></p>
+			</figcaption>
+		</div>
+		<div class="contenedor">
+			<a href="html guitarras/guitarras3.html">
+			<img class="bordes" src="Imagenes/Usadas/Used Gibson 2017 L00 Standard Acoustic Electric Guitar Vintage Sunburst.jpg" alt="Excelente estado" width="150">
+			</a>
+			<figcaption class="titulos">
+				Used Gibson 2017 L00 Standard Acoustic Electric Guitar Vintage Sunburst
+				<p class="liColor"><strong>Price: $500</strong></p>
+			</figcaption>
+		</div>
+	</div>
 
 		<br>
 		<br>
 
+	<div>
+		<img src="Imagenes/spotlight.jpg" alt="spotlight" class="publicidad">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/StzfQEruOyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-		<div>
-
-			<img src="Imagenes/spotlight.jpg" alt="spotlight">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/StzfQEruOyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/GXdv0BmTfRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/GXdv0BmTfRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
 
 </section>
+
 <footer>	
 	<p>
 		<a href="https://www.facebook.com/">
